--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-
-             
-    <wb-module deploy-name="cinema-team1-0.0.1-SNAPSHOT">
-                
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                 
+    
+    <wb-module deploy-name="pruebaHibernate-0.0.1-SNAPSHOT">
                         
+        
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                                
+        
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
                         
         
-        <property name="context-root" value="cinema-team1"/>
-                        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                                
+        
         
         <property name="java-output-path" value="/cinema-team1/build/classes"/>
-                    
+        <property name="context-root" value="pruebaHibernate"/>
+                            
+    
     
     </wb-module>
-
+    
 </project-modules>
