--- a/src/main/webapp/styles/styleSheet.css
+++ b/src/main/webapp/styles/styleSheet.css
@@ -3,6 +3,7 @@
 .mainWrap{
 	  width: 70%;
 	  text-align: center;
+	  margin-top: -100px;
 	  margin-left: auto;	
 	  margin-right: auto;
 	  padding-top: 50px;
@@ -71,5 +72,16 @@ h3.linkMainMenu:hover{
 
 thead tr th{
 	vertical-align: middle;
+}
+
+.userImg {
+	width: 50px;
+
+}
+
+.imgContainer {
+	display: flex;
+	justify-content: end;
+	margin: 20px 20px;
 }
 
